--- a/static-html/sass/layout/_page-instagram.scss
+++ b/static-html/sass/layout/_page-instagram.scss
@@ -395,27 +395,6 @@
         }
     }
 }
-@media (max-width: 768px) {
-    .menu-item-sub-dropdown {
-        margin: 5px 0;
-    }
-}
-@media (min-width: 768px) and (max-width: 980px) {
-    .menu-item-main.text-first {
-        border: none;
-        margin-bottom: 5px;
-        & + .menu-item-main.text-first {
-            border-left: 1px solid white;
-        }
-    }
-}
-@media (max-width: 400px) {
-    .modal {
-        .detail-heading .col-md-6{
-            width: 100%;
-        }
-    }
-}
 .column {
     margin-bottom: 20px;
 }
@@ -482,6 +461,33 @@ hr {
         &.fa-angle-double-left {
             right: auto;
             left: 0;
+        }
+    }
+}
+
+@media (min-width: 768px) and (max-width: 980px) {
+    .menu-item-main.text-first {
+        border: none;
+        margin-bottom: 5px;
+        & + .menu-item-main.text-first {
+            border-left: 1px solid white;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .menu-item-sub-dropdown {
+        margin: 5px 0;
+    }
+    .modal-dialog {
+        margin: 20px 10px 10px;
+    }
+}
+
+@media (max-width: 400px) {
+    .modal {
+        .detail-heading .col-md-6{
+            width: 100%;
         }
     }
 }
